Bug 350559: restoring compatibility with Python with gen.throw(). r=brendan